2002-09-23  John Levon  <levon@movementarian.org>

	* libop/op_cpu_type.c: fix arrays
 
2002-09-23  John Levon  <levon@movementarian.org>

	* utils/op_start: use right value for RTC CPU
 
2002-09-23  John Levon  <levon@movementarian.org>

	* libop/op_config.h:
	* libop/op_config_24.h:
	* libop/op_config_25.h: split config file up
 
	* daemon/opd_kernel.c:
	* daemon/oprofiled.c: include op_config_25.h

	* dae/oprofiled.c:
	* dae/opd_image.c:
	* dae/opd_kernel.c:
	* dae/opd_mapping.c: include op_config_24.h

	* module/oprofile.h: include op_config_24.h
 
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp: fix from above
	  (old support only right now)

	* libop/op_cpu_type.h: introduce 2.5-patch CPU_TIMER_INT

2002-09-23  John Levon  <levon@movementarian.org>

	* libop/op_interface_25.h: 2.5 interface

	* daemon/opd_image.c:
	* daemon/opd_sample_files.c:
	* daemon/oprofiled.c:

	* libop++/op_print_event.h: fix header

	* pp/op_to_source.cpp: change from above

2002-09-23  John Levon  <levon@movementarian.org>

	* daemon/: new 2.5 patch daemon code. WIP

	* configure.in:
	* Makefile.in: detect 2.5 patch and build appropriately
 
2002-09-23  John Levon  <levon@movementarian.org>

	* module/x86/op_msr.h: match kernel naming

	* module/x86/op_model_athlon.c: from above
 
2002-09-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db-insert.c: bad cut&paste. Shame on me, I broke the build...

2002-09-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db-insert.c: handle samples count overflow.
	
	* libdb/Makefile.in: db-test new target not built by default.
	* libdb/db-debug.c: more strict checking
	* libdb/db-test.c: allow db-test to be used as "db-test samples_dir/*"

2002-09-22  John Levon  <levon@movementarian.org>

	* dae/opd_stats.c: nicify
 
	* module/x86/op_model_pproc.c:
	* module/x86/op_model_athlon.c: drop macro prefixes, ws fixes

	* module/x86/op_nmi.c: fix save/restore possible crash, init
	  possible leak
 
2002-09-22  Philippe Elie <phil.el@wanadoo.fr>
